--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,52 +1,68 @@
+<div class="card-container">
+    <mat-card>
+        <button mat-button color="primary" (click)="newUser()">
+            <i class="fas fa-user-plus"></i>
+            Create new user
+        </button>
+    </mat-card>
+</div>
+
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
-  
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let user" (click)="openModal(user)" class="pointer"><i class="fas fa-user-edit"></i> {{user.id}} </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.name}} </td>
-      </ng-container>
-  
-      <!-- Email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let user"> {{user.email}} </td>
-      </ng-container>
-  
-      <!-- Gender Column -->
-      <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef> Gender </th>
-        <td mat-cell *matCellDef="let user"> {{user.gender}} </td>
-      </ng-container>
-  
-      <!-- Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let user"> {{user.status}} </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <td mat-cell *matCellDef="let user" (click)="openModal(user)" class="pointer">
+                <i class="fas fa-user-edit"></i>
+                <span class="spacer"></span>
+                {{user.id}}
+            </td>
+        </ng-container>
+        
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let user"> {{user.name}} </td>
+        </ng-container>
+        
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <td mat-cell *matCellDef="let user"> {{user.email}} </td>
+        </ng-container>
+        
+        <!-- Gender Column -->
+        <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef> Gender </th>
+            <td mat-cell *matCellDef="let user"> {{user.gender}} </td>
+        </ng-container>
+        
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let user"> {{user.status}} </td>
+        </ng-container>
+        
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-  
-    <span class="spacer"></span>
-    <i class="fas fa-angle-double-left"></i>
-    <span class="spacer"></span>
-    <i class="fas fa-angle-left"></i>
-    <span class="spacer"></span>
-    Page {{userPagination.page}}/{{userPagination.pages}}, {{firstResult}} to {{lastResult}} from {{userPagination.total}}
-    <span class="spacer"></span>
-    <i class="fas fa-angle-right"></i>
-    <span class="spacer"></span>
-    <i class="fas fa-angle-double-right"></i>
-    <span class="spacer"></span>
-
-
-  </div>
-  
+    
+    <div class="card-container">
+        <mat-card>
+            <span class="spacer"></span>
+            <i class="fas fa-angle-double-left"></i>
+            <span class="spacer"></span>
+            <i class="fas fa-angle-left"></i>
+            <span class="spacer"></span>
+            Page {{userPagination.page}}/{{userPagination.pages}}, {{firstResult}} to {{lastResult}} from {{userPagination.total}}
+            <span class="spacer"></span>
+            <i class="fas fa-angle-right"></i>
+            <span class="spacer"></span>
+            <i class="fas fa-angle-double-right"></i>
+            <span class="spacer"></span>
+        </mat-card>
+    </div>
+    
+    
+</div>
