--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,7 +1,20 @@
 table {
-    width: 100%;
+    width: 90vw;
 }
 
 .pointer {
     cursor: pointer;
 }
+
+.card-container {
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.spacer {
+    flex: 1;
+}
+  
