--- a/src/app/components/create-modal/create-modal.component.html
+++ b/src/app/components/create-modal/create-modal.component.html
@@ -50,11 +50,11 @@
     </form>
 </div>
 <div mat-dialog-actions>
-    <button mat-button color="accent" (click)="onNoClick()">
+    <button mat-flat-button color="accent" (click)="onNoClick()">
         <i class="fas fa-undo"></i>
         Cancel
     </button>
-    <button mat-button color="primary" (click)="onClick(data)" cdkFocusInitial>
+    <button mat-flat-button color="primary" (click)="onClick(data)" cdkFocusInitial>
         <i class="fas fa-save"></i>
         Create
     </button>
