--- a/src/app/components/update-modal/update-modal.component.html
+++ b/src/app/components/update-modal/update-modal.component.html
@@ -9,8 +9,8 @@
     </mat-chip-list>
     {{data.name}}
 </h1>
+
 <div mat-dialog-content>
-    
     <form>
         <mat-form-field class="full-width" appearance="fill">
             <mat-label>Name</mat-label>
@@ -53,15 +53,15 @@
     </form>
 </div>
 <div mat-dialog-actions>
-    <button mat-button color="accent" (click)="onNoClick()">
+    <button mat-flat-button color="accent" (click)="onNoClick()">
         <i class="fas fa-undo"></i>
         Cancel
     </button>
-    <button mat-button color="primary" (click)="onClick(data)" cdkFocusInitial>
+    <button mat-flat-button color="primary" (click)="onClick(data)" cdkFocusInitial>
         <i class="fas fa-save"></i>
         Update
     </button>
-    <button mat-button color="warn" (click)="onDeleteClick(data.id)" cdkFocusInitial>
+    <button mat-flat-button color="warn" (click)="onDeleteClick(data.id)" cdkFocusInitial>
         <i class="fas fa-trash"></i>
         Delete
     </button>
