--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,22 +1,52 @@
 <div class="card-container">
     <mat-card>
-        <button mat-button color="primary" (click)="newUser()">
+        <button mat-flat-button color="primary" class="large-button" (click)="newUser()">
             <i class="fas fa-user-plus"></i>
             Create new user
         </button>
     </mat-card>
 </div>
 
-<div class="mat-elevation-z8">
+<div class="card-container">
+    <mat-card class="paginator-container">
+        <span class="spacer"></span>
+        <span class="pointer" (click)="goToFirstPage()">
+            <i class="fas fa-angle-double-left"></i>
+        </span>
+        <span class="spacer"></span>
+        <span class="pointer" (click)="goToPreviousPage()">
+            <i class="fas fa-angle-left"></i>
+        </span>
+        <span class="spacer"></span>
+        <span>
+            Page {{userPagination.page}}/{{userPagination.pages}}, {{firstResult}} to {{lastResult}} from {{userPagination.total}}
+        </span>
+        <span class="spacer"></span>
+        <span class="pointer" (click)="goToNextPage()">
+            <i class="fas fa-angle-right"></i>
+        </span>
+        <span class="spacer"></span>
+        <span class="pointer" (click)="goToLastPage()">
+            <i class="fas fa-angle-double-right"></i>
+        </span>
+        <span class="spacer"></span>
+    </mat-card>
+</div>
+
+<div class="mat-elevation-z4">
     <table mat-table [dataSource]="dataSource">
         
         <!-- Id Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let user" (click)="openModal(user)" class="pointer">
-                <i class="fas fa-user-edit"></i>
-                <span class="spacer"></span>
-                {{user.id}}
+            <td mat-cell *matCellDef="let user">
+                <mat-chip-list>
+                    <mat-chip color="accent" (click)="openModal(user)" class="pointer" selected>
+                        <i class="fas fa-user-edit"></i>
+                        &nbsp;
+                        {{user.id}}
+                    </mat-chip>
+                </mat-chip-list>
             </td>
         </ng-container>
         
@@ -47,22 +77,20 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    
-    <div class="card-container">
-        <mat-card>
-            <span class="spacer"></span>
-            <i class="fas fa-angle-double-left"></i>
-            <span class="spacer"></span>
-            <i class="fas fa-angle-left"></i>
-            <span class="spacer"></span>
-            Page {{userPagination.page}}/{{userPagination.pages}}, {{firstResult}} to {{lastResult}} from {{userPagination.total}}
-            <span class="spacer"></span>
-            <i class="fas fa-angle-right"></i>
-            <span class="spacer"></span>
-            <i class="fas fa-angle-double-right"></i>
-            <span class="spacer"></span>
-        </mat-card>
-    </div>
-    
-    
+</div>
+
+<div class="card-container">
+    <mat-card>
+        <form>
+            <mat-form-field class="full-width" appearance="fill">
+                <mat-label>Name</mat-label>
+                <input matInput [(ngModel)]="searchByName" [formControl]="searchByNameFormControl"
+                placeholder="Type part of the name">
+                </mat-form-field>
+            <button mat-flat-button color="primary" (click)="search()">
+                <i class="fas fa-search"></i>
+                Search
+            </button>
+        </form>        
+    </mat-card>
 </div>
