--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,5 +1,6 @@
 table {
-    width: 90vw;
+    width: 100%;
+    padding-bottom: 40px;
 }
 
 .pointer {
@@ -7,14 +8,24 @@ table {
 }
 
 .card-container {
-    width: 90vw;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
+}
+
+.large-button {
+    padding: 0 100px;
 }
 
 .spacer {
     flex: 1;
 }
-  
+
+.paginator-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
