--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -10,25 +10,25 @@
 <div class="card-container">
     <mat-card class="paginator-container">
         <span class="spacer"></span>
-        <span class="pointer" (click)="goToFirstPage()">
+        <button mat-button (click)="goToFirstPage()" [disabled]="isFirstPage">
             <i class="fas fa-angle-double-left"></i>
-        </span>
+        </button>
         <span class="spacer"></span>
-        <span class="pointer" (click)="goToPreviousPage()">
+        <button mat-button (click)="goToPreviousPage()" [disabled]="isFirstPage">
             <i class="fas fa-angle-left"></i>
-        </span>
+        </button>
         <span class="spacer"></span>
         <span>
-            Page {{userPagination.page}}/{{userPagination.pages}}, {{firstResult}} to {{lastResult}} from {{userPagination.total}}
+            Page {{userPagination.page}}/{{userPagination.pages}}, showing results from {{firstResult}} to {{lastResult}} from {{userPagination.total}}
         </span>
         <span class="spacer"></span>
-        <span class="pointer" (click)="goToNextPage()">
+        <button mat-button (click)="goToNextPage()" [disabled]="isLastPage">
             <i class="fas fa-angle-right"></i>
-        </span>
+        </button>
         <span class="spacer"></span>
-        <span class="pointer" (click)="goToLastPage()">
+        <button mat-button (click)="goToLastPage()" [disabled]="isLastPage">
             <i class="fas fa-angle-double-right"></i>
-        </span>
+        </button>
         <span class="spacer"></span>
     </mat-card>
 </div>
